Hopefully fixed off centered rareroom logo on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -190,13 +190,18 @@ main > div #content ul a svg {
   line-height: 1;
 }
 
-main > div span.morse {
+main > div > span {
+  width: max-content;
+  min-width: none;
+}
+
+main > div > span > span.morse {
   font-family: EliteMath;
   display: flex;
   justify-content: space-around;
 }
 
-main > div span.morse p {
+main > div > span > span.morse p {
   font-weight: bold;
 }
 
@@ -204,8 +209,6 @@ main > div span.morse p {
   opacity: 0;
   position: absolute;
   z-index: 2;
-  width: 100%;
-  height: 100%;
   pointer-events: none;
   top: 0;
   left: 0;
